simple/test/features/errors/semantic/e1041_invalid_unary_op.spl
# E1041: Invalid Unary Operator

Feature: E1041 - Invalid Unary Operator Application
  As a Simple compiler
  I want to detect invalid unary operator usage
  So that operators are applied to compatible types

  Background:
    Given I have the Simple compiler

  Scenario: Negation on string
    When I compile:
      '''
      fn test():
        val s = "hello"
        val neg = -s  # Error: cannot negate string
      '''
    Then I should see error E1041 at line 3
    And the error message should be "cannot apply unary operator `{operator}` to type `{type}`"
    And the label should indicate "invalid unary operation"
    And the help should suggest "check if the operator is supported for this type"

  Scenario: Logical not on number
    When I compile:
      '''
      fn test():
        val x = 42
        val result = !x  # Error: ! not for integers
      '''
    Then I should see error E1041

  Scenario: Valid negation on number
    When I compile:
      '''
      fn test():
        val x = 42
        val neg = -x  # OK
      '''
    Then compilation should succeed

  Scenario: Valid logical not on boolean
    When I compile:
      '''
      fn test():
        val flag = true
        val result = !flag  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val s = "test"
        val neg = -s
      '''
    Then I should see error E1041
    And the error message should contain "잘못된 단항 연산자"
